refactor: Google Map RestClient로 변경